# QuickScript

./: .gitignore  README.md  start-dev.sh
backend/: requirements.txt  setup.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  errors.py
backend/app/services/: checkpoint_service.py  export_service.py  media_service.py  summarization_service.py  transcription_service.py  whisper_cpp_service.py
backend/app/utils/: file_utils.py  temp_storage.py  url_utils.py
backend/checkpoints/: 487b72b6-3f88-41c5-9f12-f8cdd32acdd8_extract_audio.json  52de1427-c33c-44ac-9deb-47618fdbd1fc_optimize_audio.json  53a0d3ea-a57f-4c20-8186-8c9d15ed76fa_extract_audio.json  5591fce3-408f-4624-8771-86585ee0b006_extract_audio.json  5ce78d8d-8545-4967-a4c5-8e6b21a6370c_extract_audio.json  b26e5959-b518-4383-9818-eb344dc53003_optimize_audio.json  d756d42e-69fb-4ba8-8262-fcb054700f78_optimize_audio.json
docs/: api.md  architecture.md  development.md  user_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: ExportOptions.tsx  FileUpload.css  FileUpload.tsx  MarkdownPreview.css  MarkdownPreview.tsx  ProcessingStatus.css  ProcessingStatus.tsx  UrlInput.css  UrlInput.tsx
